[gd_scene load_steps=5 format=3 uid="uid://425laymvnd48"]

[ext_resource type="Script" path="res://Scripts/build_box.gd" id="1_ulq0x"]

[sub_resource type="BoxMesh" id="BoxMesh_tj3u4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nt2pb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p3b7a"]

[node name="BuildBox" type="MeshInstance3D"]
mesh = SubResource("BoxMesh_tj3u4")
script = ExtResource("1_ulq0x")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_nt2pb")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 17
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_p3b7a")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area3D" to="." method="_on_area_3d_area_shape_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area3D" to="." method="_on_area_3d_body_shape_exited"]
